--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.5.0"
+either = "1.13.0"
+into_variant = "0.3.0"
 itertools = "0.14.0"
 rand = "0.9.0"
 serde = "1.0.217"
