--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ rand = "0.9.0"
 serde = "1.0.217"
 zerocopy = "0.8.17" 
 zerocopy-derive = "0.8.17"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "jarnac_benchmark"
+harness = false
