--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.5.0"
+dashmap = "6.1.0"
 either = "1.13.0"
 into_variant = "0.3.0"
 itertools = "0.14.0"
